--- a/assets/css/wpdcm-contact.css
+++ b/assets/css/wpdcm-contact.css
@@ -7,7 +7,8 @@
       position: fixed;
       bottom: 0;
       width: 100%;
-      display: inline-block
+      display: inline-block;
+      z-index: 10!important;
     }
     .dcm-footer-sticky-icon {
       display: flex;
