--- a/assets/css/wpdcm-contact.css
+++ b/assets/css/wpdcm-contact.css
@@ -18,6 +18,7 @@
       width: 50%;
       padding: 7px;
       font-size: 26px;
+      background-color: cadetblue;
     }
 
     .dcm-footer-sticky-icon > .dcm-icon--email > a:hover .fa-envelope::before{
